<resources>
    <string name="app_name">Chamber</string>

    <string-array name="gender">
        <item>Select Gender</item>
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string name="title_activity_member_home">Member COCIN LCC Chamber</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_admin_home">Administrator</string>
    <string name="title_activity_upcoming_events_list">UpcomingEventsListActivity</string>
    <string name="title_activity_church_groups_list">ChurchGroupsListActivity</string>
    <string name="group_logo_description">group logo</string>
    <string name="add_group">Add Group</string>
    <string name="enter_group_weekly_activities">Enter Group Weekly Activities</string>
    <string name="enter_group_description">Enter Group Description</string>
    <string name="enter_group_name">Enter Group Name</string>
    <string name="title_activity_church_leadership">ChurchLeadership</string>
    <string name="title_activity_church_gallery">ChurchGallery</string>
    <string name="event_title">Event Title</string>
    <string name="event_time">Set Event Time</string>
    <string name="event_description">Event Description</string>
    <string name="event_date">Event Date</string>
    <string name="event_venue">Event Venue</string>
    <string name="set_event_time">Set Event Time</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="even_description">Even Description</string>
    <string name="select_event_date">Select Event Date</string>
    <string name="publish_event">Publish Event</string>

    <string-array name="positions">
        <item>Select Position</item>
        <item>Leading Reverend</item>
        <item>Pastor</item>
        <item>Church Secretary</item>
        <item>Treasurer</item>
        <item>Financial Secretary</item>
        <item>Assistant Secretary</item>
        <item>Member</item>
        <item>Member</item>
        <item>Member</item>
    </string-array>

    <string-array name="change_positions">
        <item>Change Position</item>
        <item>Leading Reverend</item>
        <item>Pastor</item>
        <item>Church Secretary</item>
        <item>Treasurer</item>
        <item>Financial Secretary</item>
        <item>Assistant Secretary</item>
        <item>Member</item>
    </string-array>

    <string-array name="status">
        <item>Select Status</item>
        <item>Present</item>
        <item>Past</item>
    </string-array>

    <string-array name="change_status">
        <item>Change Status</item>
        <item>Present</item>
        <item>Past</item>
    </string-array>
</resources>
